--- a/latheMesa/graphViz/HAL_files.dox
+++ b/latheMesa/graphViz/HAL_files.dox
@@ -1,35 +1,28 @@
 /*!
     \file HAL_files.dox
-    \brief This file documents the HAL file organization.
     \addtogroup HAL
 
-    The configuration .ini specifies a HAL section.
+    \brief This file documents the HAL file organization.
 
-    \code
-        TWOPASS = on
-        HALUI = halui
-        HALFILE = latheMesa.hal
-        HALFILE = LatheSpindle.hal
-        HALFILE = estop-chain.hal
-        HALFILE = custom.hal
-        POSTGUI_HALFILE = postgui_call_list.hal
-        SHUTDOWN = shutdown.hal
-    \endcode
-
-    HALFILE
+HALFILE
         - latheMesa.hal Traditional configuration file with basic stepper control.
         - LatheSpindle.hal Configures the spindle components including encoder and pid/pwmgen for the VFD.
-        - estop-chain.hal Estop logic for G540 and encoder quadrature faults which will stop the machine.
-        - custom.hal (Empty)
+        - custom.hal
 
-    POSTGUI_HALFILE These files are loaded post GUI, in the order they appear
-        - postgui_call_list.hal - Contains the following list of files to load after the GUI.
-            - spindle_postgui.hal - Filters spindle speed for pyvcp display.
-            - joypad_jog_speed.hal - Logitech joypad jogging speed functionality.
-            - joypad_xz.hal - Connects joypad to joystick controls for lathe.
-            - joypad_extras.hal - Connnects jogging to the digital joypad, program run, pause, resume and manual/auto modoe of operation. 
+POSTGUI_HALFILE These files are loaded post GUI, in the order they appear
 
-    SHUTDOWN
+        - postgui_call_list.hal
+
+            #source custom_postgui.hal
+            source spindle_postgui.hal
+
+            source joypad_jog_speed.hal
+            source joypad_xz.hal
+            source joypad_extras.hal
+
+
+SHUTDOWN
         - shutdown.hal (empty)
+
 */
 
