--- a/latheMesa/graphViz/SpindleControl.dox
+++ b/latheMesa/graphViz/SpindleControl.dox
@@ -4,18 +4,17 @@
     \brief This file contains the doxygen description and diagram illustrating the .hal components I use with the Minarek VFD 0-10V control.
 
     The basic operation of the spindle control is to convert the spindle speed-out-abs [RPM] into the spindle-pwm signal.
-    While the basic operation can be implemented with just the spindle and pwmgen components, several refinements are made.
-    This implementation include a quadrature encoder with index to measure the shaft position and velocity.     
-    To improve the accuracy of the spindle speed, a PID loop uses the velocity command and the measured velocity from the encoder to adjust the pwm.
-    To detect when the spindle is ready, a near component compares the velocity command and measured encoder velocity.
-    To allow the old enable/forward/reverse switch on the lathe to still function these signals are multiplexed to allow either the cnc control or switches to control the spindle.
+    While the basic operation can be implemented with just the spindle and pwmgen components, several refinements are made:
+        - Spindle quadrature encoder with index to measure the spindle position and velocity.     
+        - To improve the accuracy of the spindle speed, a PID loop uses the velocity command and the measured velocity from the encoder to adjust the pwm.
+        - To detect when the spindle is ready, a near component compares the velocity command and measured encoder velocity.
+        - To allow the old enable/forward/reverse switch on the lathe to still function, these signals are multiplexed to allow either the cnc control or switches to control the spindle.
 
     \dot
         digraph structs {
             concentrate=true
             rankdir="LR"
             label="Lathe spindle control."
-
             subgraph cluster_spindle{
                 label="spindle.0"
                 node [shape=plaintext]
@@ -103,33 +102,14 @@
                     <TABLE CELLBORDER="0" BORDER="0">
                        <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
                         <TR><TD ALIGN="LEFT" port="o1">velocity</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="o2">velocity-rpm</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="o3">index-enable</TD></TR>                  
-                    </TABLE>
-                >
-                ]
-            }
-
-            subgraph cluster_gpio {
-                label="hm.0.gpio"
-                gpio [shape="box" label=<
-                    <TABLE CELLBORDER="0" BORDER="0">
-                        <TR><TD ALIGN="LEFT" port="in0">000.in</TD></TR>
-                        <TR><TD ALIGN="LEFT" port="in1">001.in</TD></TR>
-                        <TR><TD ALIGN="LEFT" port="in2">002.in</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="in3">003.in</TD></TR> 
-                        <TR><TD ALIGN="LEFT" port="in4">004.in</TD></TR> 
-
-                        <TR><TD ALIGN="LEFT" port="out0">scr.00.out0</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="out1">scr.00.out1</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="out2">scr.00.out2</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o2">index-enable</TD></TR>                  
                     </TABLE>
                 >
                 ]
             }
 
             subgraph cluster_mux2_0{
-                label="mux_gen.0"
+                label="spindle direction"
                 mux2_0 [ shape="box" label=<
                 <TABLE>
                 <TR><TD>
@@ -149,7 +129,7 @@
                 >]
             }
             subgraph cluster_mux2_1{
-                label="mux_gen.1"
+                label="spindle enable"
                 mux2_1 [ shape="box" label=<
                 <TABLE>
                 <TR><TD>
@@ -170,7 +150,7 @@
             }
 
             subgraph cluster_mux2_2{
-                label="mux_gen.2"
+                label="spindle velocity"
                 mux2_2 [ shape="box" label=<
                 <TABLE>
                 <TR><TD>
@@ -189,7 +169,6 @@
                 </TABLE>
                 >]
             }
-
             subgraph cluster_near{
                 label="near-spindle"
                 near [shape="box" label=<
@@ -211,103 +190,48 @@
                 >]
             }
 
-            subgraph cluster_abs{
-                label="abs"
-                abs [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                    </TABLE>
-                >]
-            }
-            subgraph cluster_filter{
-                label="filter"
-                filter [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                    </TABLE>
-                >]
-            }
           subgraph cluster_gmoccapy {
                 label="gmoccapy"
-                fontcolor="purple" color="purple"
-                gmoccapy [shape="box" fontcolor="purple" color="purple" label=<
+                gmoccapy [shape="box" label=<
                     <TABLE CELLBORDER="0" BORDER="0">
                        <TR><TD ALIGN="LEFT" port="i0">spindle_feedback_bar</TD></TR>
                        <TR><TD ALIGN="LEFT" port="i1">spindle_at_speed_led</TD></TR>
                     </TABLE>
                 >]
             }
-
-
-            n00 [shape="point" style="invis"];
-            n01 [shape="point" style="invis"];
-            n02 [shape="point" style="invis"];
-
-            n00 -> gpio:in0              [label="estop-G540" fontsize = "10" fontcolor="cyan" color="cyan" dir="back"];
-            n01 -> gpio:in1              [label="x-home-sw(max)"  fontsize = "10" fontcolor="cyan" color="cyan" dir="back"];
-            n02 -> gpio:in2              [label="x-home-sw(min)"  fontsize = "10" fontcolor="cyan" color="cyan" dir="back"];
-
             spindle_0:o0 -> mux2_2:in0   [label="spindle-velocity-cmd-cnc" fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_0:out:e -> pid_s:i1     [color="black"];
-            spindle_0:o3 -> pid_s:i2     [color="black"];
+            mux2_0:out:e -> pid_s:i1     [color="blue"];
+            spindle_0:o3 -> pid_s:i2     [color="blue"];
 
-            pid_s:o0 -> pwmgen:i0        [label="spindle-output"       fontsize = "12" fontcolor="black" color="black"];
-            mux2_0:out:e -> pwmgen:i1    [color="black"];
-            pwmgen:o0 -> gpio:out2       [label="spindle-pwm"          fontsize = "12" fontcolor="black" color="black"];
+            pid_s:o0 -> pwmgen:i0        [label="spindle-output"     fontsize = "12" fontcolor="blue" color="blue"];
+            mux2_0:out:e -> pwmgen:i1    [color="blue"];
+            pwmgen:o0 -> gpio:out2       [label="spindle-pwm"        fontsize = "12" fontcolor="blue" color="blue"];
 
-            encoder:o0 -> spindle_0:i0   [label="encoder-position"     fontsize = "12" fontcolor="black" color="black"];
-            encoder:o1 -> spindle_0:i1   [label="encoder-velocity"     fontsize = "12" fontcolor="black" color="black"];
-            abs:out:e  -> pid_s:f0       [color="black"];
-            encoder:o3 -> pid_s:i2       [label="spindle-index-enable" fontsize = "12" fontcolor="black" color="black"];
+            encoder:o0 -> spindle_0:i0   [label="encoder-position"     fontsize = "12" fontcolor="blue" color="blue"];
+            encoder:o1 -> spindle_0:i1   [label="encoder-velocity"     fontsize = "12" fontcolor="blue" color="blue"];
+            encoder:o1 -> pid_s:f0       [color="blue"];
+            encoder:o2 -> pid_s:i2       [label="spindle-index-enable" fontsize = "12" fontcolor="blue" color="blue"];
 
-            spindle_0:o1  -> mux2_0:in0  [label="spindle-enable-cnc"   fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_0:sel:n  -> gpio:in4    [label="spindle-enable-override" fontcolor="green" color="green" fontsize = "12" dir=back];
-            mux2_0:sel:w  -> mux2_0:in1:w [color="green"]; 
-            mux2_0:out:e  -> gpio:out0   [label="spindle-enable"       fontsize = "12" fontcolor="black" color="black"];
+            spindle_0:o1  -> mux2_0:in0  [label="spindle-enable-cnc"  fontsize = "12" fontcolor="blue" color="blue"];
+            mux2_0:sel:n  -> gpio:in3    [label="spindle-enable-override" fontsize = "12" dir=back];
+            mux2_0:sel:w  -> mux2_0:in1:w; 
+            mux2_0:out:e  -> gpio:out0   [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
 
-            spindle_0:o2  -> mux2_1:in0  [label="spindle-cw-cnc"       fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_1:in1:w  -> gpio:in3    [label="spindle-cw-override"  fontsize = "12" fontcolor="green" color="green" dir=back];
-            mux2_1:out:e  -> gpio:out1   [label="spindle-cw"           fontsize = "12" fontcolor="black" color="black"];
+            spindle_0:o2  -> mux2_1:in0  [label="spindle-cw-cnc"        fontsize = "12" fontcolor="blue" color="blue"];
+            mux2_1:in1:w  -> gpio:in4    [label="spindle-cw-override"   fontsize = "12" dir="back"];
+            mux2_1:out:e  -> gpio:out1   [label="spindle-cw"            fontsize = "12" fontcolor="blue" color="blue"];
 
-            mux2_2:out:e  -> pid_s:i0    [label="spindle-velocity-cmd" fontsize = "12" fontcolor="black" color="black"];
-            fixed_rpm     -> mux2_2:in1  [fontcolor="green" color="green"];
+            mux2_2:out:e  -> pid_s:i0    [label="spindle-velocity-cmd"          fontsize = "12" fontcolor="blue" color="blue"];
+            fixed_rpm     -> mux2_2:in1;
 
-            encoder:o2  -> filter:in     [label="encoder-velocity-rpm" fontsize = "12" ];
-            filter:out  -> abs:in        [label="encoder-rpm-filtered" fontsize = "12" ];
-            abs:out     -> near:in1      [label="spindle-fb-filtered"  fontsize = "12" fontcolor="cyan"];
-            mux2_2:out  -> near:in2;
-            near:out    -> spindle_0:i2  [label="spindle-at-speed"  fontsize = "12" fontcolor="cyan"];
+            mux2_2:out:e  -> near:in2;
+            encoder:o1    -> near:in1:w;
+            near:out      -> spindle_0:i2 [label="spindle-at-speed"           fontsize = "12"];
 
-            pid_s:o       -> gmoccapy:i0 [label="spindle-feedback-bar"  fontsize = "12" fontcolor="purple" color="purple"];
-            near:out      -> gmoccapy:i1 [label="spindle-at-speed-led"  fontsize = "12" fontcolor="purple" color="purple"];
+            pid_s:o       -> gmoccapy:i0 [label="spindle-feedback-bar"  fontsize = "12" fontcolor="cyan" color="cyan"];
+            near:out      -> gmoccapy:i1 [label="spindle-at-speed-led"  fontsize = "12" fontcolor="cyan" color="cyan"];
 
             {rank=same mux2_0 mux2_1 mux2_2};
         }
     \enddot
 */
-
-/*
-*/
-
