--- a/latheMesa/graphViz/SpindleControl.dox
+++ b/latheMesa/graphViz/SpindleControl.dox
@@ -1,14 +1,15 @@
 /*!
     \file SpindleControl.dox
-    \addtogroup SpindleControl
-    \brief This file contains the doxygen description and diagram illustrating the .hal components I use with the Minarek VFD 0-10V control.
+    \addtogroup SPINDLE
+    \brief This file contains the doxygen description and diagram illustrating the hal components I use to control the spindle using the Minarek VFD 0-10V control.
 
-    The basic operation of the spindle control is to convert the spindle speed-out-abs [RPM] into the spindle-pwm signal.
+   The basic operation of the spindle control is to convert the spindle speed-out-abs [RPM] into the spindle-pwm signal.
     While the basic operation can be implemented with just the spindle and pwmgen components, several refinements are made:
         - Spindle quadrature encoder with index to measure the spindle position and velocity.     
         - To improve the accuracy of the spindle speed, a PID loop uses the velocity command and the measured velocity from the encoder to adjust the pwm.
         - To detect when the spindle is ready, a near component compares the velocity command and measured encoder velocity.
-        - To allow the old enable/forward/reverse switch on the lathe to still function, these signals are multiplexed to allow either the cnc control or switches to control the spindle.
+        - To limit the deceleration a limit2 component is used. To avoid sudden decels when spindle is turned off, the spindle-enable is achieved by a near zero comparison. 
+        - During an estop, the limit2 will load the new (zero) value immediately resulting in a fast as possible spindle stop.
 
     \dot
         digraph structs {
@@ -30,7 +31,7 @@
                             </TD>
                             <TD>
                                 <TABLE CELLBORDER="0" BORDER="0" ALIGN="RIGHT">
-                                    <TR><TD ALIGN="RIGHT" port="o0"> speed-out-abs </TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o0"> speed-out </TD></TR> 
                                     <TR><TD ALIGN="RIGHT" port="o1"> on </TD></TR> 
                                     <TR><TD ALIGN="RIGHT" port="o2"> forward </TD></TR> 
                                     <TR><TD ALIGN="RIGHT" port="o3"> index-enable </TD></TR> 
@@ -100,78 +101,69 @@
                 label="hm.0.encoder.02"
                 encoder [shape="box" label=<
                     <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
+                        <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
                         <TR><TD ALIGN="LEFT" port="o1">velocity</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o3">velocity-rpm</TD></TR>                  
                         <TR><TD ALIGN="LEFT" port="o2">index-enable</TD></TR>                  
                     </TABLE>
                 >
                 ]
             }
 
-            subgraph cluster_mux2_0{
-                label="spindle direction"
-                mux2_0 [ shape="box" label=<
-                <TABLE>
-                <TR><TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="sel">sel-bit-00</TD></TR>
+            subgraph cluster_limit2 {
+                label="spindle-ramp"
+                limit2 [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                        
+                        <TR>
+                            <TD COLSPAN="2">
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                <TR >
+                                    <TD port="load">load</TD>
+                                </TR>
+                            </TABLE>
+                            </TD>
+                        </TR>
                     
-                       <TR><TD ALIGN="LEFT" port="in0">in-bit-00</TD></TR>
-                       <TR><TD ALIGN="LEFT" port="in1">in-bit-01</TD></TR>
                     </TABLE>
-                    </TD>
-                    <TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="out">out-bit</TD></TR>
-                    </TABLE>
-                </TD></TR>
-                </TABLE>
-                >]
-            }
-            subgraph cluster_mux2_1{
-                label="spindle enable"
-                mux2_1 [ shape="box" label=<
-                <TABLE>
-                <TR><TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="sel">sel-bit-00</TD></TR>
-                    
-                       <TR><TD ALIGN="LEFT" port="in0">in-bit-00</TD></TR>
-                       <TR><TD ALIGN="LEFT" port="in1">in-bit-01</TD></TR>
-                    </TABLE>
-                    </TD>
-                    <TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="out">out-bit</TD></TR>
-                    </TABLE>
-                </TD></TR>
-                </TABLE>
                 >]
             }
 
-            subgraph cluster_mux2_2{
-                label="spindle velocity"
-                mux2_2 [ shape="box" label=<
-                <TABLE>
-                <TR><TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="sel">sel-bit-00</TD></TR>
-                    
-                       <TR><TD ALIGN="LEFT" port="in0">in-float-00</TD></TR>
-                       <TR><TD ALIGN="LEFT" port="in1">in-float-01</TD></TR>
+            subgraph cluster_lowpass {
+                label="lowpass.0"
+                lowpass [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
                     </TABLE>
-                    </TD>
-                    <TD>
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="out">out-float</TD></TR>
-                    </TABLE>
-                </TD></TR>
-                </TABLE>
-                >]
+                >
+                ]
             }
             subgraph cluster_near{
                 label="near-spindle"
-                near [shape="box" label=<
+                nearspindle [shape="box" label=<
                     <TABLE>
                         <TR> 
                             <TD>
@@ -190,48 +182,153 @@
                 >]
             }
 
-          subgraph cluster_gmoccapy {
-                label="gmoccapy"
-                gmoccapy [shape="box" label=<
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="i0">spindle_feedback_bar</TD></TR>
-                       <TR><TD ALIGN="LEFT" port="i1">spindle_at_speed_led</TD></TR>
+            subgraph cluster_near2{
+                label="near-zero"
+                nearzero [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in1">in1</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="in2">in2</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
                     </TABLE>
                 >]
             }
-            spindle_0:o0 -> mux2_2:in0   [label="spindle-velocity-cmd-cnc" fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_0:out:e -> pid_s:i1     [color="blue"];
-            spindle_0:o3 -> pid_s:i2     [color="blue"];
+            subgraph cluster_enable_not {
+                label="spindle-enable-not"
+                enablenot [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                    </TABLE>
+                >
+                ]
+            }
+            subgraph cluster_estop_not {
+                label="estop-not"
+                estopnot [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                    </TABLE>
+                >
+                ]
+            }
 
-            pid_s:o0 -> pwmgen:i0        [label="spindle-output"     fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_0:out:e -> pwmgen:i1    [color="blue"];
-            pwmgen:o0 -> gpio:out2       [label="spindle-pwm"        fontsize = "12" fontcolor="blue" color="blue"];
+            z0 [label="0.0"];
+
+            gpiosignal_spindle_enable [shape="point" style="invis"];
+            gpiosignal_spindle_cw [shape="point" style="invis"];
+            estopout [shape="point" style="invis"];
+
+
+            spindle_0:o0 -> limit2:in   [label="spindle-cmd"  fontsize = "12"];
+            limit2:out   -> pid_s:i0    [label="spindle-ramped-cmd"  fontsize = "12"];
+            
+            spindle_0:o3 -> pid_s:i2;
+
+            pid_s:o0 -> pwmgen:i0        [label="spindle-output"     fontsize = "12"];
 
             encoder:o0 -> spindle_0:i0   [label="encoder-position"     fontsize = "12" fontcolor="blue" color="blue"];
             encoder:o1 -> spindle_0:i1   [label="encoder-velocity"     fontsize = "12" fontcolor="blue" color="blue"];
             encoder:o1 -> pid_s:f0       [color="blue"];
-            encoder:o2 -> pid_s:i2       [label="spindle-index-enable" fontsize = "12" fontcolor="blue" color="blue"];
+            encoder:o2 -> pid_s:i2       [label="spindle-index-enable"  fontsize = "12"];
 
-            spindle_0:o1  -> mux2_0:in0  [label="spindle-enable-cnc"  fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_0:sel:n  -> gpio:in3    [label="spindle-enable-override" fontsize = "12" dir=back];
-            mux2_0:sel:w  -> mux2_0:in1:w; 
-            mux2_0:out:e  -> gpio:out0   [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
 
-            spindle_0:o2  -> mux2_1:in0  [label="spindle-cw-cnc"        fontsize = "12" fontcolor="blue" color="blue"];
-            mux2_1:in1:w  -> gpio:in4    [label="spindle-cw-override"   fontsize = "12" dir="back"];
-            mux2_1:out:e  -> gpio:out1   [label="spindle-cw"            fontsize = "12" fontcolor="blue" color="blue"];
+            encoder:o3    -> lowpass:in         [label="encoder-velocity-rpm"   fontsize = "12" fontcolor="blue" color="blue"];
+            lowpass:out   -> nearspindle:in2:w  [label="encoder-rpm-filtered" fontsize = "12"];
 
-            mux2_2:out:e  -> pid_s:i0    [label="spindle-velocity-cmd"          fontsize = "12" fontcolor="blue" color="blue"];
-            fixed_rpm     -> mux2_2:in1;
 
-            mux2_2:out:e  -> near:in2;
-            encoder:o1    -> near:in1:w;
-            near:out      -> spindle_0:i2 [label="spindle-at-speed"           fontsize = "12"];
 
-            pid_s:o       -> gmoccapy:i0 [label="spindle-feedback-bar"  fontsize = "12" fontcolor="cyan" color="cyan"];
-            near:out      -> gmoccapy:i1 [label="spindle-at-speed-led"  fontsize = "12" fontcolor="cyan" color="cyan"];
+            spindle_0:o0    -> nearspindle:in1:w [label="spindle-cmd"  fontsize = "12"];
+            nearspindle:out      -> spindle_0:i2 [label="spindle-at-speed" fontsize = "12"];
 
-            {rank=same mux2_0 mux2_1 mux2_2};
+            z0 -> nearzero:in1;
+            limit2:out -> nearzero:in2 [label="spindle-ramped-cmd" fontsize = "12"];
+            nearzero:out -> enablenot:in [label="spindle-stop-not" fontsize = "12"];
+            enablenot:out -> pid_s:i1 ;
+            enablenot:out -> pwmgen:i1 ;
+            enablenot:out -> gpiosignal_spindle_enable [label="spindle-enable" fontsize = "12"];
+
+            spindle_0:o2  -> gpiosignal_spindle_cw [label="spindle-cw" fontsize = "12"];
+
+            estopout -> estopnot:in  [label="estop-out" fontsize = "12"];
+            estopnot:out -> limit2:load:s [label="estop-out-not" fontsize = "12"];
+
+            {rank=sink; gpiosignal_spindle_cw gpiosignal_spindle_enable}
+
         }
     \enddot
+*/
+/*
+
+
+
+            subgraph cluster_test {
+                label="test table"
+                testtable [shape="box" label=<
+<table>
+  <tbody>
+    <tr>
+      <td>1. Abel Obrien</td>
+    </tr>
+    <tr>
+      <td>2. Marylou Kelley</td>
+    </tr>
+    <tr>
+      <td>3. Dusty Banks</td>
+    </tr>
+    <tr>
+      <td>4. Marcellus Richard</td>
+    </tr>
+    <tr>
+      <td>5. Elvin Porter</td>
+    </tr>
+    <tr>
+      <td>6. Savannah Mullen</td>
+    </tr>
+    <tr>
+      <td>7. Edna Bean</td>
+    </tr>
+    <tr>
+      <td>8. Carson Larsen</td>
+    </tr>
+    <tr>
+      <td>9. Kelli Mack</td>
+    </tr>
+    <tr>
+      <td>10. Valeria Harding</td>
+    </tr>
+  </tbody>
+</table>
+>]}
+
 */
