--- a/router3/graphViz/SpindleControl.dox
+++ b/router3/graphViz/SpindleControl.dox
@@ -1,11 +1,11 @@
 /*!
+    \file SpindleControl.dox
     \addtogroup SpindleControl
+    \brief This file contains the doxygen description and diagram illustrating the Spindle HAL components.
 
-    This diagram illustrates the .hal components I use with a GS2 VFD using the serial communications.
-    Note, pid is used to get the correct rpm from the vfd. 
 
-    The fault relay is documented in the estoplatch documentation.
-
+    This diagram illustrates the .hal components I use with a VFD using the serial communications.
+    
     \dot
         digraph structs {
             concentrate=true
@@ -37,40 +37,6 @@
                 ]
             }
 
-            subgraph cluster_pid_s{
-                label="pid.s"
-                pid_s [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">command</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">enable</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i2">index-enable</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">output</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                        
-                        <TR>
-                            <TD COLSPAN="2">
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                <TR >
-                                    <TD port="f0">feedback</TD>
-                                </TR>
-                            </TABLE>
-                            </TD>
-                        </TR>
-                    
-                    </TABLE>
-                >
-                ]
-            }
-
             subgraph cluster_vfd{
                 label="vfd"
                 vfd [shape="box" label=<
@@ -80,57 +46,34 @@
                                    <TR><TD ALIGN="LEFT" port="i0">speed-command</TD></TR>
                                    <TR><TD ALIGN="LEFT" port="i1">spindle-on</TD></TR>
                                    <TR><TD ALIGN="LEFT" port="i2">spindle-fwd</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i3">spindle-rev</TD></TR>
                             </TABLE>
                         </TD>
                         <TD>
                             <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">spindle-rpm</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">at-speed</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">spindle-frequency</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o0">at-speed</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o1">motor-rpm</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o2">load-percentage</TD></TR> 
                             </TABLE>
                         </TD></TR>                    
                     </TABLE>
                 >]
             }
 
-            subgraph cluster_gmoccapy {
-                label="gmoccapy"
-                gmoccapy [shape="box" label=<
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="i0">spindle-feedback-bar</TD></TR>
-                       <TR><TD ALIGN="LEFT" port="i1">spindle-at-speed-led</TD></TR>
-                    </TABLE>
-                >
-                ]
-            }
+            src0  [shape="point" style="invis"];
+            sink0 [shape="point" style="invis"];
+            sink1 [shape="point" style="invis"];
 
-            subgraph cluster_pyvcb{
-                color="red"
-                fontcolor="red"
-                label="pyvcp [optional]"
-                pyvcp [ shape="box" color="red" fontcolor="red" label=<
-                    <TABLE CELLBORDER="0" BORDER="0">
-                       <TR><TD ALIGN="LEFT" port="i0">spindle-at-speed-led</TD></TR>
-                    </TABLE>
-                >
-                ]
-            }
+            spindle_0:o0 -> vfd:i0    [label="spindle-vel-cmd-rpm" fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o1 -> vfd:i1    [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o2 -> vfd:i2    [label="spindle-cw"  fontsize = "12" fontcolor="blue" color="blue"];
 
-            spindle_0:o0 -> pid_s:i0    [label="spindle-vel-cmd-rpm" fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o1 -> pid_s:i1    [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o1 -> pid_s:i2    [color="blue"];
-            spindle_0:o1 -> vfd:i1:w    [color="blue"];
-            spindle_0:o2 -> vfd:i2      [label="spindle-cw"  fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o3 -> vfd:i3      [label="spindle-ccw" fontsize = "12" fontcolor="blue" color="blue"];
+            vfd:o0 -> spindle_0:i0  [label="spindle-at-speed"  fontsize = "12" fontcolor="blue" color="blue"];
 
-            pid_s:o0 -> vfd:i0:w        [label="spindle-output"     fontsize = "12" fontcolor="blue" color="blue"];
-            vfd:o0:e -> pid_s:f0:s      [color="blue"];
-            vfd:o0:e -> gmoccapy:i0     [label="spindle-rpm"        fontsize = "12" fontcolor="blue" color="blue"];
-            vfd:o1 -> pyvcp:i0          [label="spindle-at-speed"   fontsize = "12" fontcolor="blue" color="blue"];
-            vfd:o1 -> gmoccapy:i1:w     [color="blue"];
-            vfd:o1:e -> spindle_0:i0:w  [color="blue"];
-            vfd:o2:e -> spindle_0:i1:w  [label="spindle-frequency"  fontsize = "12" fontcolor="blue" color="blue"];
+            vfd:o1 -> sink0 [label="spindle-RPM"];
+            vfd:o2 -> sink1 [label="spindle-load-percent"];
+
+            {rank=source; src0}
+            {rank=sink; sink0 sink1}
         }
     \enddot
 */
